Renderização condicional no networking e salvando na agenda nativa

--- a/app.json
+++ b/app.json
@@ -24,6 +24,14 @@
     },
     "web": {
       "favicon": "./assets/img/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-calendar",
+        {
+          "calendarPermission": "The app needs to access your calendar."
+        }
+      ]
+    ]
   }
 }
